# lrden-guardian

./: .gitignore  ACCOMPLISHMENT_SUMMARY.md  ANNOUNCEMENT.md  BUSINESS_LAUNCH_PLAN.md  DEPLOYMENT.md  DEPLOY_NOW.py  Dockerfile  IMMEDIATE_ACTIONS.md  LAUNCH_CHECKLIST.md  LAUNCH_REPORT.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  REDME-LRDEnE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.agent/: ANTI_HALLUCINATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_RECOMMENDATIONS.md  README.md  anti_hallucination_demo.py  demo.py  hallucination_stress_test.py  project.json  requirements.txt  setup.py  system_test_report.md  test_kb.py  test_report.md  ultimate_hallucination_test.py
.agent/core/: ai_router.py  anti_hallucination.py  comparison_test.py  config_manager.py  fixed_anti_hallucination.py  ide_detector.py  lrden_guardian.py  lrden_guardian_demo.py  mcp_integration.py  orchestrator.py  production_demo.py  simple_kb_test.py  skill_discovery.py  sophisticated_anti_hallucination.py  test_framework.py  test_sophisticated_system.py
.github/workflows/: ci.yml  release.yml
browser_extension/: README.md  manifest.json
browser_extension/background/: background.js
browser_extension/content/: content.css  content.js
browser_extension/options/: options.html  options.js
browser_extension/popup/: enhanced-popup.html  enhanced-popup.js  popup.html  popup.js
browser_extension/src/: guardian_engine.js
ide_integrations/: README.md
ide_integrations/cursor/: lrden-guardian-cursor.py
ide_integrations/general/: lrden-guardian-universal.py
ide_integrations/vscode/lrden-guardian-vscode/: package-lock.json  package.json
ide_integrations/vscode/lrden-guardian-vscode/src/: extension.ts
integrations/: README.md  docker-compose.yml
integrations/discord/: Dockerfile  lrden-guardian-discord.py  requirements.txt
integrations/slack/: Dockerfile  lrden-guardian-slack.py  requirements.txt
integrations/wordpress/: lrden-guardian-wordpress.php
lrden_guardian/: __init__.py  analytics.py  billing_manager.py  cli.py  compliance.py  db_adapter.py  demo.py  enhanced_anti_hallucination.py  enhanced_knowledge_base.py  enhanced_risk_calculator.py  enterprise.py  guardian.py  i18n.py  init.py  licensing.py  security_analyzer.py
lrden_guardian/config/: default_config.yaml
lrden_guardian/data/: default_patterns.json
lrden_guardian/templates/: report_template.txt
scripts/: launch.py
tests/: expansion_verification.py
web_dashboard/: Dockerfile  README.md  app.py  requirements.txt
web_dashboard/static/css/: enhanced-ui.css
web_dashboard/static/js/: enhanced-ui.js
web_dashboard/templates/: analytics_dashboard.html  base.html  demo.html  docs.html  enhanced-index.html  index.html
web_dashboard/templates/dashboard/: customer_dashboard.html
web_dashboard/templates/docs/: api_sandbox.html
web_dashboard/templates/marketing/: landing_page.html
