[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrden-guardian"
version = "1.0.0"
description = "LRDEnE Guardian - Advanced AI Safety & Hallucination Detection System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LRDEnE Technology Team", email = "tech@lrden.com"}
]
maintainers = [
    {name = "LRDEnE Technology Team", email = "tech@lrden.com"}
]
keywords = ["AI safety", "hallucination detection", "content validation", "LRDEnE", "guardian"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "nltk>=3.8.0",
    "spacy>=3.6.0",
    "textstat>=0.7.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/LRDEnE/lrden-guardian"
Documentation = "https://lrden-guardian.readthedocs.io/"
Repository = "https://github.com/LRDEnE/lrden-guardian.git"
"Bug Tracker" = "https://github.com/LRDEnE/lrden-guardian/issues"
Changelog = "https://github.com/LRDEnE/lrden-guardian/blob/main/CHANGELOG.md"

[project.scripts]
lrden-guardian = "lrden_guardian.cli:main"
lrden-init = "lrden_guardian.init:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lrden_guardian*"]

[tool.setuptools.package-data]
lrden_guardian = ["data/*.json", "templates/*.txt", "config/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox"
]
